AP-22106: Implement native `copyFrom(readData, fromIndex, toIndex)` for Arrow columns
AP-22106 (Push table sorting into table API)